# umock-examples

./: README.md
cmocka-test/: CMakeLists.txt  README.md
cmocka-test/test/: mylib.test.c
googletest-test/: CMakeLists.txt  README.md
googletest-test/include/: mylib.h
googletest-test/test/: mylib.test.c
simple-lib/: CMakeLists.txt  README.md
